# dl-xk

./: .gitignore  README (4).md  README.md  assessment_guidelines.md  best_model.pth  eda_v2.ipynb  model.ipynb  model_v1.ipynb  model_v2.ipynb  nightlights_residuals.ipynb  project_idea.md  pyproject.toml  sam_fraley_summary.md
class_notebooks/: Lab_01_data_preparation.ipynb  convnet_solutions.ipynb  lab-02-model-training.ipynb  lab-03-impact-analysisy.ipynb  lab-04-error-analysi.ipynb  prediction_practice.ipynb  segmentation_homework.ipynb  spatial_image_illustration.ipynb  spatial_image_solutions.ipynb  vision_transformer_solutions.ipynb
claude/: PROJECT_CONTEXT.md  literature_review.md  methodology_suggestions.md
data/: census24_05_20260620-155843.csv  ghsl_builtup_kosovo_2015.tif  ghsl_builtup_kosovo_2015_aligned.tif  ghsl_builtup_kosovo_2020.tif  ghsl_builtup_kosovo_2020_aligned.tif  ghsl_population_kosovo_2020.tif  ghsl_population_kosovo_2020_aligned.tif  kosovo_census_clean.csv  loocv_results.pkl  nightlights_kosovo_2012_2025.csv  nightlights_kosovo_monthly_2014_2025.csv  nightlights_municipalities.csv  nightlights_regional_2014_2025.csv  viirs_nightlights_kosovo_2023.tif  viirs_nightlights_kosovo_2025.tif
data/whosonfirst-data-admin-xk-latest/: whosonfirst-data-admin-xk-campus-point.dbf  (+17 more)
previous_work/: esg_sentiment_and_climate_change.md  french_media_far_right_poster.md  israel_palestine_media_framing_poster.md  patterns_in_media_coverage_ukraine.md
scripts/: align_rasters.py  gee_export_script.js  prepare_census.py  sanity-check.py
(+4 files in other folders)
