[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas",
    "matplotlib",
    "numpy",
    "pandas",
    "rasterio",
    "statsmodels",
    "patsy",
    "tqdm",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "ipykernel",
    "rasterstats",
    "torch",
    "torchvision",
    "torchinfo",
    "lightning>=2.6.1",
    "transformers>=5.8.1",
    "opencv-python>=4.13.0.92",
    "imutils>=0.5.4",
    "requests>=2.34.2",
    "openpyxl>=3.1.5",
    "earthengine-api>=0.1.370",
]
